# dockerfile-plus

./: .dockerignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust-ci.yml
buildkit-llb/: CHANGELOG.md  Cargo.toml  README.md
buildkit-llb/examples/: highly-parallel.rs  network.rs  scratch-owned.rs  scratch.rs
buildkit-llb/src/: lib.rs  utils.rs
buildkit-llb/src/ops/: mod.rs  terminal.rs
buildkit-llb/src/ops/exec/: command.rs  context.rs  mod.rs  mount.rs
buildkit-llb/src/ops/fs/: copy.rs  mkdir.rs  mkfile.rs  mod.rs  path.rs  sequence.rs
buildkit-llb/src/ops/source/: git.rs  http.rs  image.rs  local.rs  mod.rs
buildkit-llb/src/serialization/: id.rs  mod.rs  operation.rs  output.rs
buildkit-proto/: CHANGELOG.md  Cargo.toml  README.md  build.rs  update.sh
buildkit-proto/src/: lib.rs
dockerfile-plus/: Cargo.toml  Dockerfile
dockerfile-plus/examples/: README.md
dockerfile-plus/examples/envfile/: Dockerfile  dev.env
dockerfile-plus/examples/include/: Dockerfile  Dockerfile.common
dockerfile-plus/src/: dockerfile_frontend.rs  main.rs  stdio.rs
dockerfile-plus/src/options/: common.rs  default.rs  deserializer.rs  mod.rs
