[package]
name = "buildkit-proto"
version = "0.2.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

description = "Protobuf interfaces to BuildKit"
documentation = "https://docs.rs/buildkit-proto"
repository = "https://github.com/denzp/rust-buildkit"
readme = "README.md"
keywords = ["buildkit", "docker", "protobuf", "prost"]
categories = ["development-tools::build-utils", "api-bindings"]
license = "MIT/Apache-2.0"

[dependencies]
prost = "0.6"
prost-types = "0.6"
tonic = { git = "https://github.com/edrevo/tonic", branch = "unimplemented-content-type" }

[build-dependencies.tonic-build]
git = "https://github.com/edrevo/tonic"
branch = "unimplemented-content-type"
default-features = false
features = ["prost", "transport"]
