[package]
name = "dockerfile-plus"
version = "0.1.0"
authors = ["Ximo Guanter <ximo.guanter@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0.1"
crossbeam = "0.7"
either = "1"
env_logger = "0.8"
futures = "0.3"
libc = "0.2"
mio = "0.6"
pin-project = "1"
prost = "0.6"
prost-types = "0.6"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-threaded"] }
tonic = { git = "https://github.com/edrevo/tonic", branch = "unimplemented-content-type" }
tower = "0.3"
url = "2.2"
buildkit-llb = { version = "0.2", path = "../buildkit-llb" }
buildkit-proto = { version = "0.2", path = "../buildkit-proto" }
