[package]
name = "dockerfile-plus"
version = "0.2.0"
authors = ["Ximo Guanter <ximo.guanter@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.54"
async-trait = "0.1.52"
crossbeam = "0.8.1"
either = "1.6.1"
env_logger = "0.9.0"
futures = "0.3.21"
libc = "0.2.119"
mio = "0.6.21"
pin-project = "1.0.10"
prost = "0.9.0"
prost-types = "0.9.0"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = "*"
tonic = { git = "https://github.com/aminya/tonic", branch = "master" }
tower = "0.4.12"
url = "2.2.2"
buildkit-llb = { version = "0.2", path = "../buildkit-llb" }
buildkit-proto = { version = "0.2", path = "../buildkit-proto" }
